# embeddings-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: Dockerfile  cf.py  cloudflare_vectorize.py  roles.py
src/app/: api.py  config.py  exceptions.py  factory.py  main.py  models.py  test_main.py
src/app/document/: models.py
src/app/embeddings/: models.py  utils.py
src/app/embeddings/cloudflare/: service.py  views.py
src/app/embeddings/qdrant/: service.py  views.py
src/app/lib/cloudflare/: api.py  async_api.py
src/app/namespace/: models.py
src/app/namespace/cloudflare/: models.py  service.py  views.py
src/app/namespace/qdrant/: models.py  service.py  views.py
src/embeddings/: api.py  main.py  models.py  test_main.py
src/embeddings-api/: main.py
src/embeddings-api/app/: api.py  config.py  factory.py
src/embeddings-api/app/embeddings/: models.py  views.py
src/embeddings/app/: api.py  config.py
src/embeddings/app/document/: models.py
src/embeddings/app/embeddings/: enums.py  models.py  service.py  utils.py  views.py
src/embeddings/app/lib/: cloudflare.py
src/embeddings/app/namespace/: models.py  service.py  views.py
src/embeddings/app/permissions/: auth.py
src/embeddings/app/scripts/: test.py  test_cloudflare.py  test_qdrant.py
src/embeddings/embeddings/: models.py
src/embeddings/embeddings/cloudflare/: views.py
src/embeddings/embeddings/qdrant/: service.py  views.py
src/embeddings/namespace/: service.py
src/embeddings/scripts/: test.py
src/tests/: test_endpoints.py
(+20 files in other folders)
