[tool.poetry]
name = "embeddings"
version = "0.1.0"
description = ""
authors = ["Aaron Joyce <joyceaa@tcd.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.1"
qdrant-client = "^1.7.3"
requests = "^2.31.0"
retry = "^0.9.2"
aiohttp = "^3.9.3"
cloudflare = "^2.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
